Created a reusable base class for the admin

--- a/lib/admin/templates/gallery/new.mustache
+++ b/lib/admin/templates/gallery/new.mustache
@@ -32,7 +32,7 @@
 				<th scope="row"><h2>show the videos from</h2></th>
 				<td>
 					<h2>
-						<input type="text" size="40" name="vimeography_basic_settings[source_url]" placeholder="eg. {{#defaults}}{{source_url}}{{/defaults}}" />
+						<input type="text" size="40" name="vimeography_basic_settings[source_url]" placeholder="eg. {{#get_vimeography_defaults}}{{source_url}}{{/get_vimeography_defaults}}" />
 					</h2>
 				</td>
 			</tr>
